# hive

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: main.rs
src/agent/: mod.rs  orchestrator.rs  runner.rs
src/git/: mod.rs  validator.rs  worktree.rs
src/task/: mod.rs  store.rs  task.rs
